# axum-oidc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/basic/: .env.example  .gitignore  Cargo.toml  README.md
examples/basic/keycloak_example/: compose.yml
examples/basic/src/: lib.rs  main.rs
examples/basic/tests/: integration.rs  keycloak.rs
src/: builder.rs  error.rs  extractor.rs  handler.rs  lib.rs  middleware.rs  util.rs
tests/: integration.rs  keycloak.rs  utils.rs
