[package]
edition = "2021"
name = "basic"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-oidc = { path = "./../.." }
dotenvy = "0.15"
tokio = { version = "1.43", features = ["macros", "net", "rt-multi-thread"] }
tower = "0.5"
tower-sessions = "0.14"

openidconnect = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

[dev-dependencies]
env_logger = "0.11"
headless_chrome = "1.0"
log = "0.4"
reqwest = { version = "0.12", features = [
    "rustls-tls",
], default-features = false }
testcontainers = "0.23"
tokio = { version = "1.43", features = ["rt-multi-thread"] }
#see https://github.com/rust-headless-chrome/rust-headless-chrome/issues/535
auto_generate_cdp = "=0.4.4"
