[package]
edition = "2024"
name = "basic"
version = "0.1.0"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
axum-oidc = { path = "./../.." }
dotenvy = "0.15"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
tower = "0.5.3"
tower-sessions = "0.15.0"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
serde = "1.0.228"
